refactor with codex app